--- a/example.env
+++ b/example.env
@@ -1,9 +1,8 @@
-MYSQL_HOST=mysql
-MYSQL_PORT=3308
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_USER_PASS=root
-MYSQL_DB_NAME=nodeback
+MYSQL_DB_NAME=staffscheduler
 MYSQL_ROOT_PASSWORD=root
-PORT=8888
-SECRET_KEY=workhard
 NODE_ENV=development
+JWT_SECRET=somesecret
