--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,10 @@ services:
     build: ./database
     image: mysql:latest
     container_name: 'mysql'
+    command: --init-file /data/application/init.sql
     volumes:
       - ./database/data:/var/lib/mysql
+      - ./init.sql:/data/application/init.sql
     ports:
       - '${MYSQL_PORT}:${MYSQL_PORT}'
     expose:
